# LEVEL3_MLops_forklifts

./: .gitignore  Makefile  README.md  clean_data.py  load_mask.py  pyproject.toml  train_XGBoost.py
api/: main.py
artifacts/: xgboost_load_model.json
pipeline/assets/: __init__.py  assets.py  sensors.py
pipeline/assets/XGBoost_training/: evaluation.py  train_XGBoost.py
pipeline/assets/cleaning/: cleaning_helpers.py  cleaning_pipeline.py
pipeline/assets/engineered_data/: __init__.py  engineered_data.py
pipeline/assets/evaluating/: evaluate_model.py
pipeline/assets/preprocessing/: preprocessing.py
pipeline/config/: __init__.py  config.py  resources.py
