[project]
name = "final_product"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
    "dagster>=1.8.14",
    "dagster-webserver>=1.8.14",
    "mlflow>=2.17.2",
]
